Fix for breaking desktop imgs after fixing on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,9 +83,6 @@ body {
     color: white;
 }
 
-#drawing {
-    width: 100%;
-}
 
 /* styling for next page button */
 #next_page {
@@ -222,6 +219,11 @@ body {
         color: blue;
         background-color: gray;
     }
+
+    #drawing {
+        width: 100%;
+    }
+
 }
 
 /* css for activated mobile topnav */
@@ -275,6 +277,11 @@ body {
         width: 100%;
         text-decoration: none;
     }   
+
+    #drawing {
+        width: 100%;
+    }
+
 }
 
 @font-face {
